--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -38,7 +38,8 @@ jobs:
           script: |
             const pulls = await github.paginate('GET /repos/:owner/:repo/pulls', {
               owner: context.repo.owner,
-              repo: context.repo.repo
+              repo: context.repo.repo,
+              author: app/dependabot
             });
             branches = [];
             prs = [];
@@ -46,7 +47,6 @@ jobs:
             for (const pull of pulls) {
               const branch = pull['head']['ref'];
               console.log('Pull for branch: ' + branch);
-              if (branch.startsWith('${{ github.event.inputs.branchPrefix }}')) {
                 console.log('Branch matched: ' + branch);
                 statusOK = true;
                 if(${{ github.event.inputs.mustBeGreen }}) {
@@ -64,7 +64,6 @@ jobs:
                       statusOK = false;
                     }
                   }
-                }
                 console.log('Checking labels: ' + branch);
                 const labels = pull['labels'];
                 for(const label of labels) {
