--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const pulls = await github.paginate('GET /repos/:owner/:repo/pulls', {
+            const pulls = await github.paginate('GET /repos/:owner/:repo/pulls?head=bot:dependabot', {
               owner: context.repo.owner,
               repo: context.repo.repo
             });
