--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -118,7 +118,7 @@ jobs:
           git branch $COMBINE_BRANCH_NAME $basebranch
           git checkout $COMBINE_BRANCH_NAME
           git pull origin $sourcebranches --edit
-          git push origin $COMBINE_BRANCH_NAME
+          git push origin $COMBINE_BRANCH_NAME --edit
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
         name: Create Combined Pull Request
