--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -115,10 +115,10 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           
-          git branch $COMBINE_BRANCH_NAME $basebranch
+          git branch $COMBINE_BRANCH_NAME $basebranch --no-commit --no-ff $COMBINE_BRANCH_NAME
           git checkout $COMBINE_BRANCH_NAME
-          git pull origin $sourcebranches --edit
-          git push origin $COMBINE_BRANCH_NAME --edit
+          git pull origin $sourcebranches --no-edit
+          git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
         name: Create Combined Pull Request
