--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -115,9 +115,9 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           
-          git branch $COMBINE_BRANCH_NAME $basebranch --no-commit --no-ff $COMBINE_BRANCH_NAME
+          git branch $COMBINE_BRANCH_NAME $basebranch
           git checkout $COMBINE_BRANCH_NAME
-          git pull origin $sourcebranches --no-edit
+          git merge --no-commit --no-ff $sourcebranches
           git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
