--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -117,7 +117,7 @@ jobs:
           
           git branch $COMBINE_BRANCH_NAME $basebranch
           git checkout $COMBINE_BRANCH_NAME
-          git pull origin $sourcebranches --no-edit --no-commit --no-ff
+          git fetch origin $sourcebranches
           git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
