--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -116,8 +116,8 @@ jobs:
           git config user.email github-actions@github.com
           
           git branch $COMBINE_BRANCH_NAME $basebranch
-          git checkout $COMBINE_BRANCH_NAME
-          git request-pull v1.0 $sourcebranches $basebranch
+          git push $sourcebranches $COMBINE_BRANCH_NAME
+          git request-pull combine-prs-branch $sourcebranches $basebranch
           git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
