--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -115,10 +115,9 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           
-          git branch $COMBINE_BRANCH_NAME $basebranch
+          git checkout $basebranch
+          git checkout $sourcebranches
           git push $sourcebranches $COMBINE_BRANCH_NAME
-          git request-pull combine-prs-branch $sourcebranches $basebranch
-          git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
         name: Create Combined Pull Request
