--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -115,9 +115,9 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           
-          git checkout $basebranch
-          git checkout $sourcebranches
-          git push $sourcebranches $COMBINE_BRANCH_NAME
+          git branch $COMBINE_BRANCH_NAME $basebranch
+          git checkout $COMBINE_BRANCH_NAME
+          git request-pull $COMBINE_BRANCH_NAME $basebranch
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
         name: Create Combined Pull Request
