--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -117,7 +117,8 @@ jobs:
           
           git branch $COMBINE_BRANCH_NAME $basebranch
           git checkout $COMBINE_BRANCH_NAME
-          git request-pull $sourcebranches $basebranch
+          git pull origin $sourcebranches --no-commit
+          git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
         name: Create Combined Pull Request
