--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -117,6 +117,7 @@ jobs:
           
           git branch $COMBINE_BRANCH_NAME $basebranch
           git checkout $COMBINE_BRANCH_NAME
+          git pull origin master
           git fetch origin $sourcebranches -a
           git push origin $COMBINE_BRANCH_NAME
       # Creates a PR with the new combined branch
