--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -115,11 +115,9 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           
-          git branch $COMBINE_BRANCH_NAME $basebranch
-          git checkout $COMBINE_BRANCH_NAME
-          git pull origin master
-          git fetch origin $sourcebranches -a
-          git push origin $COMBINE_BRANCH_NAME
+          git checkout master
+          git checkout -b combine-pr-branch
+          git fetch origin $sourcebranches 
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
         name: Create Combined Pull Request
