removed no edit

--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -117,7 +117,7 @@ jobs:
           
           git branch $COMBINE_BRANCH_NAME $basebranch
           git checkout $COMBINE_BRANCH_NAME
-          git fetch origin $sourcebranches --no-edit
+          git fetch origin $sourcebranches
           git push --set-upstream origin master
       # Creates a PR with the new combined branch
       - uses: actions/github-script@v3
